# ai_engineer_path_way

./: .gitignore  README.md
00-python-production-grade/: explore_mongo.py  main.py  pyproject.toml  pyrightconfig.json
00-python-production-grade/02-ruff-and-pre-commit/: README.md  main.py
00-python-production-grade/03-typing/code/02-static-vs-dynamic-languages/: py-types.py
00-python-production-grade/03-typing/code/03-typing-in-python/: generics.py  p2_func.py  p3_collect.py  sql_injection.py
00-python-production-grade/04-asyncio/: README.md  SCALENE_NOTEBOOK_GUIDE.md  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example_scalene_notebook.ipynb  terms.py
00-python-production-grade/poo-basics/: README.md  file1.py  file2.py
FASE 0/: FASE0.md  pyproject.toml
FASE 0/03-typing/: README.md
FASE 0/03-typing/code/03-typing-in-python/: p1_var.py
FASE 0/03-typing/code/04-frameworks-built-on-typing/: d1_parsing_with_pydantic.py  d2_parsing_weather.py
FASE 0/03-typing/code/04-frameworks-built-on-typing/web_example/__MACOSX/: ._pypi-top-5k-mongo
FASE 0/03-typing/code/05-tooling/: runtime_example.py
FASE 0/03-typing/code/06-orthogonal-typing/: inherance.py
