[project]
name = "fase-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncio>=4.0.0",
    "beanie>=2.0.1",
    "beartype>=0.22.9",
    "fastapi>=0.124.4",
    "jinja2>=3.1.6",
    "mypy>=1.19.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pillow>=10.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "scalene>=2.0.0",
    "ruff>=0.14.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
